--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -1,169 +1,158 @@
 {
     "Library": "Biblioteca",
-    "Settings": "Configuración",
+    "Settings": "Ajustes",
     "Login": "Iniciar sesión",
     "Logout": "Cerrar sesión",
-    "Toggle Theme": "Alternar Tema",
-    "Total Files": "Total de Archivos",
-    "Click for details": "Clic para detalles",
-    "Owned Content": "Contenido Propio",
-    "Library Status": "Estado de la Biblioteca",
-    "Missing Content": "Contenido Faltante",
+    "Toggle Theme": "Cambiar tema",
+    "Total Files": "Total de archivos",
+    "Click for details": "Haga clic para detalles",
+    "Owned Content": "Contenido propio",
+    "Library Status": "Estado de la biblioteca",
+    "Missing Content": "Contenido faltante",
     "Games": "Juegos",
     "Updates": "Actualizaciones",
     "DLCs": "DLCs",
-    "Items": "Ítems",
+    "Items": "Artículos",
     "Save": "Guardar",
     "Games needing Update": "Juegos que necesitan actualización",
-    "Games missing DLCs": "Juegos con DLCs faltantes",
-    "Missing Base Games": "Juegos Base Faltantes",
-    "Missing Updates": "Actualizaciones Faltantes",
-    "Missing DLCs": "DLCs Faltantes",
+    "Games missing DLCs": "Juegos a los que les faltan DLCs",
+    "Missing Base Games": "Faltan juegos base",
+    "Missing Updates": "Faltan actualizaciones",
+    "Missing DLCs": "Faltan DLCs",
     "Search titles...": "Buscar títulos...",
-    "Card View": "Vista de Tarjetas",
-    "Icon View": "Vista de Iconos",
-    "List View": "Vista de Lista",
-    "Items per page": "Ítems por página",
+    "Card View": "Vista de tarjeta",
+    "Icon View": "Vista de icono",
+    "List View": "Vista de lista",
+    "Items per page": "Artículos por página",
     "Icon": "Icono",
     "Title": "Título",
     "ID": "ID",
     "Type": "Tipo",
     "Version": "Versión",
-    "Multiple": "Múltiples",
-    "Owned": "Adquirido",
+    "Multiple": "Múltiple",
+    "Owned": "Propio",
     "Missing": "Faltante",
-    "No DLCs or Updates available": "No hay DLCs o Actualizaciones disponibles",
+    "No DLCs or Updates available": "Sin DLCs ni actualizaciones disponibles",
     "TitleDB Sources": "Fuentes de TitleDB",
-    "Current Active Source": "Fuente Activa Actual",
+    "Current Active Source": "Fuente activa actual",
     "Last local update": "Última actualización local",
-    "ago": "atrás",
-    "Up to date": "Actualizado",
-    "Outdated": "Desactualizado",
-    "Remote Source Date": "Fecha de la Fuente Remota",
-    "Loaded Titles File": "Archivo de Títulos Cargado",
-    "No TitleDB source active": "Ninguna fuente de TitleDB activa",
-    "Run an update to populate TitleDB status": "Ejecute una actualización para poblar el estado de TitleDB",
+    "ago": "hace",
+    "Up to date": "Al día",
+    "Outdated": "Obsoleto",
+    "Remote Source Date": "Fecha de la fuente remota",
+    "Loaded Titles File": "Archivo de títulos cargado",
+    "No TitleDB source active": "Sin fuente de TitleDB activa",
+    "Run an update to populate TitleDB status": "Ejecute una actualización para completar el estado de TitleDB",
     "List of sources": "Lista de fuentes",
     "Name": "Nombre",
     "URL": "URL",
     "Priority": "Prioridad",
     "Priorities updated": "Prioridades actualizadas",
     "Failed to update priorities": "Error al actualizar prioridades",
-    "Settings saved": "Configuración guardada",
-    "Shop settings saved": "Configuración de la tienda guardada",
-    "Auto-use latest": "Usar más reciente automáticamente",
-    "Save TitleDB settings": "Guardar configuración de TitleDB",
-    "Save": "Guardar",
+    "Settings saved": "Ajustes guardados",
+    "Shop settings saved": "Ajustes de la tienda guardados",
+    "Auto-use latest": "Usar el más reciente automáticamente",
+    "Save TitleDB settings": "Guardar ajustes de TitleDB",
     "Automatically use the source with the most recent data": "Usar automáticamente la fuente con los datos más recientes",
     "Refresh remote dates": "Actualizar fechas remotas",
     "Status": "Estado",
     "Actions": "Acciones",
-    "Enabled": "Habilitado",
-    "Disabled": "Deshabilitado",
-    "Last Update": "Última Actualización",
+    "Enabled": "Activado",
+    "Disabled": "Desactivado",
+    "Last Update": "Última actualización",
     "Never": "Nunca",
     "Users": "Usuarios",
     "User": "Usuario",
     "Permissions": "Permisos",
     "Shop": "Tienda",
     "Backup": "Copia de seguridad",
-    "Admin": "Admin",
+    "Admin": "Administrador",
     "Delete user": "Eliminar usuario",
     "Cancel": "Cancelar",
     "Delete": "Eliminar",
-    "Add new user": "Añadir nuevo usuario",
+    "Add new user": "Agregar nuevo usuario",
     "Username": "Nombre de usuario",
     "Password": "Contraseña",
-    "Add User": "Añadir Usuario",
-    "Add a new user": "Añadir un nuevo usuario",
-    "Shop Access": "Acceso a la Tienda",
-    "Backup Access": "Acceso a Copias de Seguridad",
-    "Admin Access": "Acceso Admin",
+    "Add User": "Agregar usuario",
+    "Add a new user": "Agregar un nuevo usuario",
+    "Shop Access": "Acceso a la tienda",
+    "Backup Access": "Acceso a la copia de seguridad",
+    "Admin Access": "Acceso de administrador",
     "Email": "Correo electrónico",
     "List of users": "Lista de usuarios",
     "Library paths": "Rutas de la biblioteca",
     "Path of directory containing your games": "Ruta del directorio que contiene sus juegos",
     "Path": "Ruta",
-    "Add library path": "Añadir ruta de biblioteca",
+    "Add library path": "Agregar ruta de biblioteca",
     "Scan library": "Escanear biblioteca",
-    "Add a new directory": "Añadir un nuevo directorio",
-    "Add": "Añadir",
+    "Add a new directory": "Agregar nuevo directorio",
+    "Add": "Agregar",
     "Delete library path": "Eliminar ruta de biblioteca",
     "General": "General",
     "Region": "Región",
     "Language": "Idioma",
-    "Library Region": "Región de la Biblioteca",
-    "Library Language": "Idioma de la Biblioteca",
-    "Region and Language used to get games informations": "Región e idioma utilizados para obtener información de juegos",
+    "Library Region": "Región de la biblioteca",
+    "Library Language": "Idioma de la biblioteca",
+    "Region and Language used to get games informations": "Región e idioma utilizados para obtener información de los juegos",
     "Console keys": "Claves de consola",
-    "Keys are valid": "¡Las claves son válidas!",
-    "Invalid keys file": "¡Archivo de claves no válido!",
+    "Keys are valid": "¡Claves válidas!",
+    "Invalid keys file": "¡Archivo de claves inválido!",
     "Application language": "Idioma de la aplicación",
-    "Tinfoil/MyFoil uses this to identify files": "Las claves de consola son necesarias para descifrar cualquier contenido de Nintendo. MyFoil las usa para identificar archivos independientemente del nombre del archivo.",
+    "Tinfoil/MyFoil uses this to identify files": "Se requieren claves de consola para descifrar cualquier contenido de Nintendo, incluidas las copias de seguridad. MyFoil usa esto para identificar archivos, independientemente del nombre del archivo",
     "Submit": "Enviar",
     "Titles": "Títulos",
-    "Manage TitleDB metadata sources and priorities": "Gestionar fuentes de metadatos de TitleDB y prioridades",
-    "Add New Source": "Añadir Nueva Fuente",
-    "Source Name": "Nombre de la Fuente",
-    "Base URL": "URL Base",
-    "Source Type": "Tipo de Fuente",
+    "Manage TitleDB metadata sources and priorities": "Administrar fuentes y prioridades de metadados de TitleDB",
+    "Add New Source": "Agregar nueva fuente",
+    "Source Name": "Nombre de la fuente",
+    "Base URL": "URL base",
+    "Source Type": "Tipo de fuente",
     "JSON (Direct)": "JSON (Directo)",
     "Legacy (ZIP)": "Legado (ZIP)",
-    "Force TitleDB Update": "Forzar Actualización de TitleDB",
-    "Shop Settings": "Configuración de la Tienda",
-    "Shop Host": "Host de la Tienda",
-    "Your full URL with protocol": "Su URL completa con protocolo (ej: https://ejemplo.com)",
+    "Force TitleDB Update": "Forzar actualización de TitleDB",
+    "Shop Settings": "Ajustes de la tienda",
+    "Shop Host": "Host de la tienda",
+    "Your full URL with protocol": "Su URL completa con protocolo (ej: https://exemplo.com)",
     "Public shop": "Tienda pública",
-    "If enabled, Shop access from Tinfoil does not require authentication": "Si está habilitado, el acceso a la Tienda desde Tinfoil no requiere autenticación",
+    "If enabled, Shop access from Tinfoil does not require authentication": "Si está activado, el acceso a la tienda desde Tinfoil no requiere autenticación",
     "Encrypt shop": "Cifrar tienda",
-    "Serve encrypted and compressed shop": "Servir tienda cifrada y comprimida para que solo clientes Tinfoil puedan acceder al contenido",
-    "Strongly suggested to enable it for security": "Se recomienda encarecidamente habilitarlo por seguridad",
+    "Serve encrypted and compressed shop": "Servir tienda cifrada y comprimida, para que solo los clientes de Tinfoil puedan acceder al contenido",
+    "Strongly suggested to enable it for security": "Se sugiere encarecidamente activarlo por seguridad",
     "Message of the day": "Mensaje del día",
-    "Message presented when opening Tinfoil": "Mensaje presentado al abrir Tinfoil después de cargar su tienda con éxito",
+    "Message presented when opening Tinfoil": "Mensaje presentado al abrir Tinfoil después de cargar con éxito su tienda",
     "Publisher": "Editor",
-    "Release Date": "Fecha de Lanzamiento",
+    "Release Date": "Fecha de lanzamiento",
     "Size": "Tamaño",
     "Genre": "Género",
     "Language / Idioma": "Language / Idioma",
-    "English (Default)": "Inglés (Predeterminado)",
-    "Português (Brasil)": "Português (Brasil)",
-    "Español": "Español",
-    "Browser detection is enabled by default": "La detección del navegador está habilitada de forma predeterminada",
+    "English (Default)": "Inglés (predeterminado)",
+    "Português (Brasil)": "Portugués (Brasil)",
+    "Browser detection is enabled by default": "La detección del navegador está activada por defecto",
     "Fetch updates from DBI database": "Obtener actualizaciones de la base de datos de DBI",
     "Use DBI versions database instead of TitleDB for updates and DLCs": "Usar la base de datos de versiones de DBI en lugar de TitleDB para actualizaciones y DLCs",
     "Description": "Descripción",
     "No description available": "No hay descripción disponible",
-    "Authentication": "Autenticación",
-    "Missing admin account!": "¡Cuenta de administrador faltante!",
-    "Authentication is disabled. Anyone can access and change your configuration until an admin is created.": "La autenticación está desactivada. Cualquiera puede acceder y cambiar su configuración hasta que se cree un administrador.",
-    "Add one here": "Añada uno aquí",
-    "Missing console keys!": "¡Faltan las claves de la consola!",
-    "Nintendo content decryption requires keys. Titles will be misidentified.": "El descifrado de contenido de Nintendo requiere claves. Los títulos se identificarán incorrectamente.",
-    "Extraction guide": "Guía de extracción",
-    "Configure your shop URL to enable host verification.": "Configure la URL de su tienda para habilitar la verificación de host.",
-    "Shop URL": "URL de la Tienda",
     "Versions": "Versiones",
     "close": "cerrar",
-    "Filter by Genre": "Filtrar por Género",
-    "Filter by Tag": "Filtrar por Etiqueta",
-    "All Genres": "Todos los Géneros",
-    "All Tags": "Todas las Etiquetas",
+    "Filter by Genre": "Filtrar por género",
+    "Filter by Tag": "Filtrar por etiqueta",
+    "All Genres": "Todos los géneros",
+    "All Tags": "Todas las etiquetas",
     "Filters": "Filtros",
     "Sort": "Ordenar",
     "A-Z (Name)": "A-Z (Nombre)",
     "Z-A (Name)": "Z-A (Nombre)",
-    "Release (Newest)": "Lanzamiento (Nuevo)",
-    "Release (Oldest)": "Lanzamiento (Antiguo)",
-    "Recently Added": "Añadido Recientemente",
-    "Oldest Added": "Añadido Antiguamente",
-    "Title ID (Ascending)": "Title ID (Ascendente)",
-    "Update Status": "Estado de Actualización",
-    "Clear Filters": "Limpiar Filtros",
-    "Missing Base File": "Falta Archivo Base",
-    "Updates Pending": "Actualización Pendiente",
-    "DLCs Pending": "DLC Pendiente",
+    "Release (Newest)": "Lanzamiento (Más reciente)",
+    "Release (Oldest)": "Lanzamiento (Más antiguo)",
+    "Recently Added": "Recientemente agregado",
+    "Oldest Added": "Agregado hace más tiempo",
+    "Title ID (Ascending)": "ID del título (ascendente)",
+    "Update Status": "Estado de actualización",
+    "Clear Filters": "Limpiar filtros",
+    "Missing Base File": "Falta el archivo base",
+    "Updates Pending": "Actualizaciones pendientes",
+    "DLCs Pending": "DLCs pendientes",
     "Base": "Base",
-    "Update": "Update",
+    "Update": "Actualización",
     "DLC": "DLC",
     "Grid": "Cuadrícula",
     "Icons": "Iconos",
@@ -171,10 +160,15 @@
     "Clear": "Limpiar",
     "Library updated!": "¡Biblioteca actualizada!",
     "View DLC details": "Ver detalles de DLC",
-    "Add Tag...": "Añadir Etiqueta...",
-    "Wishlist": "Lista de Deseos",
-    "Removed from Wishlist": "Eliminado de la Lista de Deseos",
-    "Added to Wishlist": "Añadido a la Lista de Deseos",
-    "Total on Disk": "Total en Disco",
-    "Custom Tags": "Etiquetas Personalizadas"
+    "Add Tag...": "Agregar etiqueta...",
+    "Wishlist": "Lista de deseos",
+    "Removed from Wishlist": "Eliminado de la lista de deseos",
+    "Added to Wishlist": "Agregado a la lista de deseos",
+    "Monitoring": "Monitoreando",
+    "Not monitoring": "No monitoreando",
+    "libraries": "bibliotecas",
+    "library": "biblioteca",
+    "No libraries configured": "No hay bibliotecas configuradas",
+    "Total on Disk": "Total en disco",
+    "Custom Tags": "Etiquetas personalizadas"
 }
