--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -5,7 +5,7 @@
     "Logout": "Sair",
     "Toggle Theme": "Alternar Tema",
     "Total Files": "Total de Arquivos",
-    "Click for details": "Clique para detalhes",
+    "Click for details": "Clique para detalles",
     "Owned Content": "Conteúdo Adquirido",
     "Library Status": "Status da Biblioteca",
     "Missing Content": "Conteúdo Faltante",
@@ -53,7 +53,6 @@
     "Shop settings saved": "Configurações da loja salvas",
     "Auto-use latest": "Usar mais recente automaticamente",
     "Save TitleDB settings": "Salvar configurações do TitleDB",
-    "Save": "Salvar",
     "Automatically use the source with the most recent data": "Automaticamente usar a fonte com os dados mais recentes",
     "Refresh remote dates": "Atualizar datas remotas",
     "Status": "Status",
@@ -99,7 +98,7 @@
     "Keys are valid": "Chaves são válidas!",
     "Invalid keys file": "Arquivo de chaves inválido!",
     "Application language": "Idioma da aplicação",
-    "Tinfoil/MyFoil uses this to identify files": "Chaves do console são necessárias para descriptografar qualquer conteúdo Nintendo, incluindo backups. MyFoil usa isto para identificar arquivos, independentemente do nome do arquivo",
+    "Tinfoil/MyFoil uses this to identify files": "Chaves do console são necessárias para descriptografar cualquier conteúdo Nintendo, incluindo backups. MyFoil usa isto para identificar arquivos, independentemente do nome do arquivo",
     "Submit": "Enviar",
     "Titles": "Títulos",
     "Manage TitleDB metadata sources and priorities": "Gerenciar fontes de metadados TitleDB e prioridades",
@@ -114,7 +113,7 @@
     "Shop Host": "Host da Loja",
     "Your full URL with protocol": "Sua URL completa com protocolo (ex: https://exemplo.com)",
     "Public shop": "Loja pública",
-    "If enabled, Shop access from Tinfoil does not require authentication": "Se ativado, o acesso à Loja via Tinfoil não requer autenticação",
+    "If enabled, Shop access from Tinfoil does not require authentication": "Se ativado, o acesso à Loja via Tinfoil não requer autenticación",
     "Encrypt shop": "Criptografar loja",
     "Serve encrypted and compressed shop": "Servir loja criptografada e comprimida, para que apenas clientes Tinfoil possam acessar o conteúdo",
     "Strongly suggested to enable it for security": "Fortemente sugerido ativar para segurança",
@@ -175,5 +174,10 @@
     "Removed from Wishlist": "Removido da Wishlist",
     "Added to Wishlist": "Adicionado à Wishlist",
     "Total on Disk": "Total em Disco",
-    "Custom Tags": "Tags Personalizadas"
+    "Custom Tags": "Tags Personalizadas",
+    "Monitoring": "Monitorando",
+    "Not monitoring": "Não monitorando",
+    "libraries": "bibliotecas",
+    "library": "biblioteca",
+    "No libraries configured": "Nenhuma biblioteca configurada"
 }
