ui: change 'Last Download' to 'Last Processing' for more accuracy

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -170,5 +170,6 @@
     "library": "library",
     "No libraries configured": "No libraries configured",
     "Total on Disk": "Total on Disk",
-    "Custom Tags": "Custom Tags"
+    "Custom Tags": "Custom Tags",
+    "Last Processing": "Last Processing"
 }
