--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -179,5 +179,6 @@
     "Not monitoring": "Não monitorando",
     "libraries": "bibliotecas",
     "library": "biblioteca",
-    "No libraries configured": "Nenhuma biblioteca configurada"
+    "No libraries configured": "Nenhuma biblioteca configurada",
+    "Last Processing": "Último processamento"
 }
