Refactor Wishlist feature and add REDUNDANT update badge

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -171,5 +171,6 @@
     "No libraries configured": "No libraries configured",
     "Total on Disk": "Total on Disk",
     "Custom Tags": "Custom Tags",
-    "Last Processing": "Last Processing"
+    "Last Processing": "Last Processing",
+    "REDUNDANT": "REDUNDANT"
 }
