i18n: refactor js files to use semantic translation keys and update json files
- Refatorados system_status.js, nav.js e modals.js para usar chaves semânticas (ex: 'status.system_idle', 'modal.confirm_title') ao invés de strings hardcoded.
- Atualizados en.json e pt_BR.json com todas as novas chaves criadas.

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -172,5 +172,41 @@
     "Total on Disk": "Total on Disk",
     "Custom Tags": "Custom Tags",
     "Last Processing": "Last Processing",
-    "REDUNDANT": "REDUNDANT"
+    "REDUNDANT": "REDUNDANT",
+    "status.system_idle": "System Idle",
+    "status.no_active_ops": "No active operations",
+    "status.no_recent_activity": "No recent activity",
+    "job.library_scan": "Library Scan",
+    "job.titledb_update": "TitleDB Update",
+    "job.metadata_fetch": "Metadata Fetch",
+    "job.file_identification": "File Identification",
+    "job.backup": "Backup",
+    "job.cleanup": "Cleanup",
+    "toast.cleared_success": "Active operations cleared. Stuck jobs cancelled.",
+    "toast.cleared_error": "Failed to clear operations.",
+    "toast.cancel_success": "Job cancelled successfully",
+    "toast.cancel_error": "Failed to cancel job",
+    "toast.comm_error": "Error communicating with server",
+    "common.download": "Download",
+    "common.delete_file": "Delete File",
+    "common.version": "Version",
+    "common.redundant": "REDUNDANT",
+    "common.error": "Error",
+    "common.missing": "Missing",
+    "common.date": "Date",
+    "common.status": "Status",
+    "common.more": "more",
+    "common.name": "Name",
+    "common.release_date": "Release Date",
+    "modal.confirm_title": "Confirm Action",
+    "modal.confirm_msg": "Are you sure you want to proceed?",
+    "modal.confirm_btn": "Confirm",
+    "modal.base_files_found": "Base Files Found",
+    "modal.missing_base": "Missing Base File",
+    "modal.updates": "Updates",
+    "modal.no_updates_dlcs": "No DLCs or Updates available",
+    "modal.update_history": "Update History",
+    "modal.dlcs_found": "Additional Content (DLCs)",
+    "modal.view_dlc_details": "View DLC details",
+    "modal.ignore_dlc": "Ignore this DLC"
 }
