--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -181,5 +181,41 @@
     "library": "biblioteca",
     "No libraries configured": "Nenhuma biblioteca configurada",
     "Last Processing": "Último processamento",
-    "REDUNDANT": "REDUNDANTE"
+    "REDUNDANT": "REDUNDANTE",
+    "status.system_idle": "Sistema Ocioso",
+    "status.no_active_ops": "Nenhuma operação ativa",
+    "status.no_recent_activity": "Nenhuma atividade recente",
+    "job.library_scan": "Escaneamento da Biblioteca",
+    "job.titledb_update": "Atualização do TitleDB",
+    "job.metadata_fetch": "Busca de Metadados",
+    "job.file_identification": "Identificação de Arquivos",
+    "job.backup": "Backup",
+    "job.cleanup": "Limpeza",
+    "toast.cleared_success": "Operações ativas limpas. Jobs travados cancelados.",
+    "toast.cleared_error": "Falha ao limpar operações.",
+    "toast.cancel_success": "Job cancelado com sucesso",
+    "toast.cancel_error": "Falha ao cancelar job",
+    "toast.comm_error": "Erro comunicar com o servidor",
+    "common.download": "Download",
+    "common.delete_file": "Excluir Arquivo",
+    "common.version": "Versão",
+    "common.redundant": "REDUNDANTE",
+    "common.error": "Erro",
+    "common.missing": "Faltando",
+    "common.date": "Data",
+    "common.status": "Status",
+    "common.more": "mais",
+    "common.name": "Nome",
+    "common.release_date": "Lançamento",
+    "modal.confirm_title": "Confirmar Ação",
+    "modal.confirm_msg": "Deseja realmente prosseguir?",
+    "modal.confirm_btn": "Confirmar",
+    "modal.base_files_found": "Arquivos Base Encontrados",
+    "modal.missing_base": "Falta Arquivo Base",
+    "modal.updates": "Atualizações",
+    "modal.no_updates_dlcs": "Nenhuma Atualização ou DLC disponível",
+    "modal.update_history": "Histórico de Atualizações",
+    "modal.dlcs_found": "Conteúdo Adicional (DLCs)",
+    "modal.view_dlc_details": "Ver detalhes desta DLC",
+    "modal.ignore_dlc": "Ignorar esta DLC"
 }
